edits to master

--- a/index.ipynb
+++ b/index.ipynb
@@ -4,90 +4,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Types of Trends"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Types of Trends\n",
+    "\n",
     "## Introduction\n",
     "\n",
-    "Often, basic regression techniques are not sufficient to grasp the more complex, time-dependent patterns that are common when dealing with time series data. Using time series analysis techniques, the purpose is to get more insight in your data on one hand, and to make predictions on the other hand. First, we'll introduce the types of trends that exist in time series models and have a look at them."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Objectives"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Often, basic regression techniques are not sufficient to grasp the more complex, time-dependent patterns that are common when dealing with time series data. Using time series analysis techniques, the purpose is to get more insight in your data on one hand, and to make predictions on the other hand. First, we'll introduce the types of trends that exist in time series models and have a look at them.\n",
+    "\n",
+    "## Objectives\n",
+    "\n",
     "You will be able to:\n",
     "\n",
     "* Check and comment on the stationarity of time series data \n",
     "* Use rolling statistics as an initial check for stationarity \n",
-    "* Use the Dickey Fuller Test for performing statistical testing for time series stationarity"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Stationarity"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "* Use the Dickey Fuller Test for performing statistical testing for time series stationarity\n",
+    "\n",
+    "## Stationarity\n",
+    "\n",
     "A time series is said to be stationary if its statistical properties such as mean, variance remain constant over time. \n",
     "\n",
-    "Why is it important? Because most time series models work on the assumption that **the time series are stationary**. For general time series datasets, if it shows a particular behaviour over time, there is a very high probability that it will follow a similar behaviour in the future. Also, the theories related to stationary series are more mature and easier to implement as compared to non-stationary series.\n",
+    "Why is it important? Because most time series models work on the assumption that **the time series are stationary**. For general time series datasets, if it shows a particular behavior over time, there is a very high probability that it will follow a similar behavior in the future. Also, the theories related to stationary series are more mature and easier to implement as compared to non-stationary series.\n",
     "\n",
     "Although stationarity is defined using very strict criteria, for practical purposes we can assume the series to be stationary if it has following constant statistical properties over time:\n",
     "\n",
     "> * **The mean of the series should not be a function of time rather should be a constant. The image below has the left hand graph satisfying the condition whereas the graph in red has a time dependent mean.**\n",
     "\n",
-    "![](Mean_nonstationary.png)\n",
+    "![](images/mean_nonstationary.png)\n",
     "\n",
     "> * **The variance of the series should not a be a function of time. This property is known as homoscedasticity. Following graph depicts what is and what is not a stationary series. (Notice the varying spread of distribution in the right hand graph)**\n",
     "\n",
-    "![](Var_nonstationary.png)\n",
+    "![](images/var_nonstationary.png)\n",
     "> * **The covariance of the i th term and the (i + m) th term should not be a function of time. In the following graph, you will notice the spread becomes closer as the time increases. Hence, the covariance is not constant with time for the ‘red series’ below.**\n",
     "\n",
-    "![](Cov_nonstationary.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Types of trends: overview"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "WHen time series models are not stationary, we say there is a **trend**. Let's have a look at a few examples of trends that can be observed in time series models."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### No trend"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "![](images/cov_nonstationary.png)\n",
+    "\n",
+    "## Types of trends: overview\n",
+    "\n",
+    "WHen time series models are not stationary, we say there is a **trend**. Let's have a look at a few examples of trends that can be observed in time series models.\n",
+    "\n",
+    "### No trend\n",
+    "\n",
     "Let's consider our the monthly returns for the NYSE from January 1961 through December 1966 again. You'll notice that the monthly return goes up and down, but there is no clear direction, and over time, the index oscillates around 0. We say that this particular time series has *no trend*. "
    ]
   },
@@ -205,21 +160,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Linear trend"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Upward linear"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In many cases, there will be some sort of trend, however. A common trend type is a linear trend, where the observation grows bigger over time, or declines. Examples given here are the quarterly U.K. importes of goods and services over time. A second example is a record of the winning times for the men's 400 m final at the olympics. Note how the winning time has gone down over the years!"
+    "### Linear trend\n",
+    "\n",
+    "#### Upward linear\n",
+    "\n",
+    "In many cases, there will be some sort of trend, however. A common trend type is a linear trend, where the observation grows bigger over time, or declines. Examples given here are the quarterly U.K. imports of goods and services over time. A second example is a record of the winning times for the men's 400 m final at the Olympics. Note how the winning time has gone down over the years!"
    ]
   },
   {
@@ -252,13 +197,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Downward linear"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "#### Downward linear\n",
+    "\n",
     "Winning times for the men's 400 m final in each Olympic Games from 1896 to 1996."
    ]
   },
@@ -302,13 +242,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exponential trend"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Exponential trend\n",
+    "\n",
     "Another type of trend that can be observed is an exponential trend. A typical example could be a company's sales. As small companies start to grow sales could be slower, when their product catches people's attention the sales can start to grow exponentially. A simulated example can be found below."
    ]
   },
@@ -465,13 +400,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Trend with an increasing variance"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Trend with an increasing variance\n",
+    "\n",
     "In the previous trend types, the variability remained constant over time. But in some cases, this might not be the case, and variability can change over time. A simulated example is shown in the plot below."
    ]
   },
@@ -552,13 +482,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Testing for trends"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Testing for trends\n",
+    "\n",
     "Let's look at our generated monthly sales data again with exponential trends. From simply inspecting the data, it is already pretty clear that there is a certain trend."
    ]
   },
@@ -604,20 +529,10 @@
    "source": [
     " In what follows, we'll discuss two formal ways to assess trends:\n",
     "- Rolling statistics\n",
-    "- The Dickey-Fuller Test"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Rolling statistics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- The Dickey-Fuller Test\n",
+    "\n",
+    "### Rolling statistics\n",
+    "\n",
     "We can plot the moving average or moving variance and see if it varies with time. By moving average/variance we mean **at any point in time $t$, we can take the average/variance of the, let's say, $m$ last time periods. $m$ is then known as the window size**. \n",
     "\n",
     "Pandas has a built in function called [rolling()](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.rolling.html), which can be called along with `.mean()` and `.std()` to calculate these rolling statistics. Let's take a window size of 8 for this example."
@@ -663,20 +578,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The red and black lines represent the rolling mean and rolling standard deviations. You can clearly see that the mean is not constant over time, so we can reconfirm our conclusion that the time series are not stationary based on rolling mean and rolling standard error. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### The Dickey Fuller Test"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "The red and black lines represent the rolling mean and rolling standard deviations. You can clearly see that the mean is not constant over time, so we can reconfirm our conclusion that the time series are not stationary based on rolling mean and rolling standard error. \n",
+    "\n",
+    "### The Dickey Fuller Test\n",
+    "\n",
     "The Dickey Fuller Test is a statistical test for testing stationarity. The Null-hypothesis for the test is that the time series is not stationary. So if the test statistic is less than the critical value, we reject the null\n",
     "hypothesis and say that the series is stationary. The Dickey Fuller test is available in stattools from the StatsModels module. More details on this can be viewed [here](http://www.statsmodels.org/dev/generated/statsmodels.tsa.stattools.adfuller.html)."
    ]
@@ -755,16 +660,11 @@
    "source": [
     "## Additional materials\n",
     "\n",
-    "A great overview of how to test for time series stationarity can be found [here](https://machinelearningmastery.com/time-series-data-stationary-python/)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "A great overview of how to test for time series stationarity can be found [here](https://machinelearningmastery.com/time-series-data-stationary-python/).\n",
+    "\n",
     "## Summary\n",
     "\n",
-    "In this lab, you learned how to check for the stationarity of a time series object in python. You used rolling statistics, with rolling mean and rolling standrad deviation to check for trends and seasonal elements in a time series, and how to use Dickey Fuller test to run statistical test on a time series and check for its stationarity with a significance level."
+    "In this lab, you learned how to check for the stationarity of a time series object in python. You used rolling statistics, with rolling mean and rolling standard deviation to check for trends and seasonal elements in a time series, and how to use Dickey Fuller test to run statistical test on a time series and check for its stationarity with a significance level."
    ]
   }
  ],
