--- a/index.ipynb
+++ b/index.ipynb
@@ -28,14 +28,14 @@
     "\n",
     "> * **The mean of the series should not be a function of time rather should be a constant. The image below has the left hand graph satisfying the condition whereas the graph in red has a time dependent mean.**\n",
     "\n",
-    "![](images/mean_nonstationary.png)\n",
+    "<img src=\"images/new_mean_nonstationary.png\" width=\"600\">\n",
     "\n",
     "> * **The variance of the series should not a be a function of time. This property is known as homoscedasticity. Following graph depicts what is and what is not a stationary series. (Notice the varying spread of distribution in the right hand graph)**\n",
     "\n",
-    "![](images/var_nonstationary.png)\n",
+    "<img src=\"images/new_var_nonstationary.png\" width=\"600\">\n",
     "> * **The covariance of the i th term and the (i + m) th term should not be a function of time. In the following graph, you will notice the spread becomes closer as the time increases. Hence, the covariance is not constant with time for the ‘red series’ below.**\n",
     "\n",
-    "![](images/cov_nonstationary.png)\n",
+    "<img src=\"images/new_cov_nonstationary.png\" width=\"600\">\n",
     "\n",
     "## Types of trends: overview\n",
     "\n",
@@ -684,7 +684,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
