spelling, grammar, and word choice

--- a/index.ipynb
+++ b/index.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "Often, basic regression techniques are not sufficient to grasp the more complex, time-dependent patterns that are common when dealing with time series data. Using time series analysis techniques, the purpose is to get more insight in your data on one hand, and to make predictions on the other hand. First, we'll introduce the types of trends that exist in time series models and have a look at them.\n",
+    "Often, basic regression techniques are not sufficient to grasp the more complex, time-dependent patterns that are common when dealing with time series data. Using time series analysis techniques, the purpose is to get more insight into your data on one hand and to make predictions on the other hand. First, we'll introduce the types of trends that exist in time series models and have a look at them.\n",
     "\n",
     "## Objectives\n",
     "\n",
@@ -16,7 +16,7 @@
     "\n",
     "* Check and comment on the stationarity of time series data \n",
     "* Use rolling statistics as an initial check for stationarity \n",
-    "* Use the Dickey Fuller Test for performing statistical testing for time series stationarity\n",
+    "* Use the Dickey-Fuller Test for performing statistical testing for time series stationarity\n",
     "\n",
     "## Stationarity\n",
     "\n",
@@ -26,11 +26,11 @@
     "\n",
     "Although stationarity is defined using very strict criteria, for practical purposes we can assume the series to be stationary if it has following constant statistical properties over time:\n",
     "\n",
-    "> * **The mean of the series should not be a function of time rather should be a constant. The image below has the left hand graph satisfying the condition whereas the graph in red has a time dependent mean.**\n",
+    "> * **The mean of the series should not be a function of time rather should be a constant. The image below has the left-hand graph satisfying the condition whereas the graph in red has a time-dependent mean.**\n",
     "\n",
     "<img src=\"images/new_mean_nonstationary.png\" width=\"600\">\n",
     "\n",
-    "> * **The variance of the series should not a be a function of time. This property is known as homoscedasticity. Following graph depicts what is and what is not a stationary series. (Notice the varying spread of distribution in the right hand graph)**\n",
+    "> * **The variance of the series should not be a function of time. This property is known as homoscedasticity. The following graph depicts what is and what is not a stationary series. (Notice the varying spread of distribution in the right-hand graph)**\n",
     "\n",
     "<img src=\"images/new_var_nonstationary.png\" width=\"600\">\n",
     "> * **The covariance of the i th term and the (i + m) th term should not be a function of time. In the following graph, you will notice the spread becomes closer as the time increases. Hence, the covariance is not constant with time for the ‘red series’ below.**\n",
@@ -43,7 +43,7 @@
     "\n",
     "### No trend\n",
     "\n",
-    "Let's consider our the monthly returns for the NYSE from January 1961 through December 1966 again. You'll notice that the monthly return goes up and down, but there is no clear direction, and over time, the index oscillates around 0. We say that this particular time series has *no trend*. "
+    "Let's consider the monthly returns for the NYSE from January 1961 through December 1966 again. You'll notice that the monthly return goes up and down, but there is no clear direction, and over time, the index oscillates around 0. We say that this particular time series has *no trend*. "
    ]
   },
   {
@@ -205,7 +205,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data = pd.read_csv(\"winning_400m.csv\")\n",
@@ -244,7 +246,7 @@
    "source": [
     "### Exponential trend\n",
     "\n",
-    "Another type of trend that can be observed is an exponential trend. A typical example could be a company's sales. As small companies start to grow sales could be slower, when their product catches people's attention the sales can start to grow exponentially. A simulated example can be found below."
+    "Another type of trend that can be observed is an exponential trend. A typical example could be a company's sales. As small companies start to grow sales could be slower; when their product catches people's attention the sales can start to grow exponentially. A simulated example can be found below."
    ]
   },
   {
@@ -535,13 +537,15 @@
     "\n",
     "We can plot the moving average or moving variance and see if it varies with time. By moving average/variance we mean **at any point in time $t$, we can take the average/variance of the, let's say, $m$ last time periods. $m$ is then known as the window size**. \n",
     "\n",
-    "Pandas has a built in function called [rolling()](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.rolling.html), which can be called along with `.mean()` and `.std()` to calculate these rolling statistics. Let's take a window size of 8 for this example."
+    "Pandas has a built-in function called [rolling()](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.rolling.html), which can be called along with `.mean()` and `.std()` to calculate these rolling statistics. Let's take a window size of 8 for this example."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "rolmean = ts.rolling(window = 8, center = False).mean()\n",
@@ -580,10 +584,10 @@
    "source": [
     "The red and black lines represent the rolling mean and rolling standard deviations. You can clearly see that the mean is not constant over time, so we can reconfirm our conclusion that the time series are not stationary based on rolling mean and rolling standard error. \n",
     "\n",
-    "### The Dickey Fuller Test\n",
+    "### The Dickey-Fuller Test\n",
     "\n",
-    "The Dickey Fuller Test is a statistical test for testing stationarity. The Null-hypothesis for the test is that the time series is not stationary. So if the test statistic is less than the critical value, we reject the null\n",
-    "hypothesis and say that the series is stationary. The Dickey Fuller test is available in stattools from the StatsModels module. More details on this can be viewed [here](http://www.statsmodels.org/dev/generated/statsmodels.tsa.stattools.adfuller.html)."
+    "The Dickey-Fuller Test is a statistical test for testing stationarity. The Null-hypothesis for the test is that the time series is not stationary. So if the test statistic is less than the critical value, we reject the null\n",
+    "hypothesis and say that the series is stationary. The Dickey-Fuller test is available in stattools from the StatsModels module. More details on this can be viewed [here](http://www.statsmodels.org/dev/generated/statsmodels.tsa.stattools.adfuller.html)."
    ]
   },
   {
@@ -623,7 +627,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A nice print-out of the Dickey Fuller test can be found below.\n",
+    "A nice print-out of the Dickey-Fuller test can be found below.\n",
     "The p-value is 1 here, so the time series are clearly not stationary!"
    ]
   },
@@ -664,27 +668,27 @@
     "\n",
     "## Summary\n",
     "\n",
-    "In this lab, you learned how to check for the stationarity of a time series object in python. You used rolling statistics, with rolling mean and rolling standard deviation to check for trends and seasonal elements in a time series, and how to use Dickey Fuller test to run statistical test on a time series and check for its stationarity with a significance level."
+    "In this lab, you learned how to check for the stationarity of a time series object in python. You used rolling statistics, with rolling mean and rolling standard deviation to check for trends and seasonal elements in a time series, and how to use Dickey-Fuller test to run a statistical test on a time series and check for its stationarity with a significance level."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14"
   },
   "toc": {
    "base_numbering": 1,
