--- a/index.ipynb
+++ b/index.ipynb
@@ -14,9 +14,9 @@
     "\n",
     "You will be able to:\n",
     "\n",
-    "* Check and comment on the stationarity of time series data \n",
-    "* Use rolling statistics as an initial check for stationarity \n",
-    "* Use the Dickey-Fuller Test for performing statistical testing for time series stationarity\n",
+    "- Check and comment on the stationarity of time series data \n",
+    "- Use rolling statistics as an initial check for stationarity \n",
+    "- Use the Dickey-Fuller Test for performing statistical testing for time series stationarity\n",
     "\n",
     "## Stationarity\n",
     "\n",
@@ -674,21 +674,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
